Fixed alignment

--- a/mycleancity/static/css/mycleancity.css
+++ b/mycleancity/static/css/mycleancity.css
@@ -729,6 +729,7 @@ div.content.my-challenges #white-box.user-challenges { width: 528px; height: 400
 div.content.my-challenges #white-box.user-challenges div.table-container { border: none; overflow: initial; }
 div.content.my-challenges #white-box.user-challenges .table tr td.icon { padding: 0 10px !important; }
 div.content.my-challenges #white-box.user-challenges .table tr th { padding: 0 5px 5px 0 !important; }
+div.content.my-challenges #white-box.user-challenges .table tr #clean-creds { text-align: right; }
 div.content.my-challenges #white-box.user-challenges .table tr td { border: none; padding-left: 0 !important; padding-right: 0 !important; }
 div.content.my-challenges #white-box.user-challenges .table tr td.total-clean-creds { text-align: center; }
 div.content.my-challenges #white-box.user-challenges .table tr td.total-hours { text-align: center; }
